PyMaker/datas/object2/RawHTML/i8901/Python_DOC_referPages.python-simplifying-if-statement-logic.txt
<div class="post-text" itemprop="text">
<p>I have a case where I have to use if statement learning python:</p>
<pre><code>if ([Team1_matches[0]&gt;Team2_matches[0] and Team1_matches[1]&gt;Team2_matches[1] and Team1_matches[2]&gt;Team2_matches[2] and
 Team1_matches[3]&gt;Team2_matches[3] and Team1_matches[4]&gt;Team2_matches[4]]):
winner="Team 1"
elif ([Team2_matches[0]&gt;Team1_matches[0] and Team2_matches[1]&gt;Team1_matches[1] and Team2_matches[2]&gt;Team1_matches[2] and
  Team2_matches[3]&gt;Team1_matches[3] and Team2_matches[4]&gt;Team1_matches[4] ]):
winner="Team 2"
else:winner="it was a draw or something went wrong"
</code></pre>
<p>It's always returning team 1 for some reason due to my poor combination, please advice how I can achieve the real value for winner, without having to if for many lines, if this is programmatically correct I will do it, just need advice</p>
<p>Without the braces</p>
<pre><code>   if Team1_matches[0]&gt;Team2_matches[0] and Team1_matches[1]&gt;Team2_matches[1] and Team1_matches[2]&gt;Team2_matches[2] and
                                                                                                                    ^
</code></pre>
<p>SyntaxError: invalid syntax</p>
<p>I am getting the input this way:</p>
<pre><code>Team1_matches[0] = input("Enter the score that team 1 got on match 1? ")
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>As Rawing said in the comments, you have unneeded braces around your checks and non-empty lists are considered <code>True</code>. See <a href="https://docs.python.org/2/library/stdtypes.html#truth-value-testing" rel="nofollow noreferrer">the Python documentation</a> for more info. </p>
<p>Try this:</p>
<pre><code>Team1_matches=[1,2,3,4,5]
Team2_matches=[5,5,5,5,6]
if (Team1_matches[0]&gt;Team2_matches[0] and Team1_matches[1]&gt;Team2_matches[1] and Team1_matches[2]&gt;Team2_matches[2] and Team1_matches[3]&gt;Team2_matches[3] and Team1_matches[4]&gt;Team2_matches[4]):
    winner="Team 1"
elif (Team2_matches[0]&gt;Team1_matches[0] and Team2_matches[1]&gt;Team1_matches[1] and Team2_matches[2]&gt;Team1_matches[2] and Team2_matches[3]&gt;Team1_matches[3] and Team2_matches[4]&gt;Team1_matches[4]):
    winner="Team 2"
else:
    winner="it was a draw or something went wrong"

print(winner)

&gt;&gt;&gt; Team 2
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The solution using built-in <a href="https://docs.python.org/3/library/functions.html#all" rel="nofollow noreferrer"><strong><em>all</em></strong></a> function:</p>
<pre><code>Team1_matches = [1,2,3,4,5]
Team2_matches = [2,3,4,5,6]

r = range(0, len(Team1_matches))  # range size

if all(Team1_matches[i] &gt; Team2_matches[i] for i in r):
    winner="Team 1"
elif all(Team2_matches[i] &gt; Team1_matches[i] for i in r):
    winner="Team 2"
else:
    winner="it was a draw or something went wrong"

print(winner)  # outputs: "Team 2"
</code></pre>
</div>
<span class="comment-copy">what is the input? why are there <code>[]</code> around your if conditions?</span>
<span class="comment-copy">Remove the braces around your if condition. <code>if ([...]):</code> -&gt; <code>if ...:</code>. As it is, you're checking the truth value of a list of booleans, which is always <code>True</code> because it's not empty.</span>
<span class="comment-copy">You should also look into <a href="http://stackoverflow.com/questions/1663807/how-can-i-iterate-through-two-lists-in-parallel-in-python">how to iterate through two lists in parallel</a>.</span>
<span class="comment-copy">Also, you should not ever post code in comments.</span>
<span class="comment-copy">Thank you, so what's the best way or value to put for the lists? Or is there any logic behind the numbers you filled the lists with?</span>
<span class="comment-copy">That's up to your implementation. I just put in values to test. How are you getting these lists?</span>
<span class="comment-copy">Sorry for that, will add it in the first post in a second.</span>
<span class="comment-copy">When I added 'all' only to my code I got this: TypeError: 'bool' object is not iterable</span>
<span class="comment-copy">don't <i>add only to your code</i> - use my code</span>
<span class="comment-copy">I meant, adding 'all' Only after if and elif, so if I used if all from your code I am getting the error above.</span>
<span class="comment-copy">@Ridah, check this demo <a href="https://repl.it/FvmT/0" rel="nofollow noreferrer">repl.it/FvmT/0</a> to see that it works</span>
